--- a/index.html
+++ b/index.html
@@ -8,27 +8,18 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-
-    <header id="header">
-        <div class="container__header">
-            <div class="logo">
-                <h1><u>UNTREF</u></h1>
-            </div>
-            <div class="container__nav">
-                <nav id="nav">
-                    <ul>
-                        <li><a href="./index.html" class="select">HOME</a></li>
-                        <li><a href="#about-us">ABOUT US</a></li>
-                        <li><a href="#choose-us">CHOOSE US</a></li>
-                        <li><a href="#educational-option">EDUCATIONAL OPTION</a></li>
-                        <li><a href="#news">NEWS</a></li>
-                        <li><a href="./page/contact.html">CONTACT US</a></li>
-                    </ul>
-                </nav>
-                <div class="btn__menu" id="btn_menu"><i class="fas fa-bars"></i></div>
-            </div>
-        </div>
-    </header>
+    <header>
+    <nav>
+      <ul>
+        <li><a href="./index.html" class="select">HOME</a></li>
+        <li><a href="#about-us">ABOUT US</a></li>
+        <li><a href="#choose-us">CHOOSE US</a></li>
+        <li><a href="#educational-option">EDUCATIONAL OPTION</a></li>
+        <li><a href="#news">NEWS</a></li>
+        <li><a href="./page/contact.html">CONTACT US</a></li>
+      </ul>
+    </nav>
+  </header> 
     <main>
         <div class="container_all" id="container__all">
             <div class="cover">
@@ -42,10 +33,11 @@
                 <!--FINAL WAVE-->
             <div class="container__cover">
             <div class="container__info">
+                <div class="logo">UNTREF</div>
                 <h1>UNTREF SCHOOL</h1>
                     <h2>YOUR</h2>
                     <h2>BEST CHOICE</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non aut impedit ea debitis ab, amet ipsa ipsum odio magnam voluptatem dicta praesentium obcaecati facilis, nulla fugiat itaque repellendus eaque tempora.</p>
+                    <p>Careers and Courses That Integrate Technology, Communication, Art and Design</p>
                     <input type="button" value="Access">
                 </div>
                 <div class="container__vector">
@@ -67,14 +59,8 @@
             <div class="contenedor">
                 <h2 class="choose-us">CHOOSE US</h2>
                 <h3 class="slogan">Making things</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem dicta rem hic totam necessitatibus
-                tempora animi error perferendis. Vero corrupti porro quia! Ad saepe alias, officiis voluptatem sed, odio
-                dolores neque dolorem placeat nam quia numquam soluta ipsam nostrum consequuntur, a magnam non. Tenetur
-                repudiandae distinctio inventore voluptate fugit laborum?</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem dicta rem hic totam necessitatibus
-                tempora animi error perferendis. Vero corrupti porro quia! Ad saepe alias, officiis voluptatem sed, odio
-                dolores neque dolorem placeat nam quia numquam soluta ipsam nostrum consequuntur, a magnam non. Tenetur
-                repudiandae distinctio inventore voluptate fugit laborum?</p>
+                <p>UNTREF, is a leading educational institution, characterized by innovative study programs that integrate New Information Technologies and Communications with Art and Design. With three offices in the heart of the City of Buenos Aires, Argentina, UNTREF was the first institute to offer a degree in Multimedia Design in Latin America. Currently, it also offers degrees in Video Game Design and Programming, Web Design and Programming, Graphic Design, Animation Film and Post-Production, and Systems Analyst, in addition to numerous design, programming, video game, 3D, and digital art courses in the format of Courses for Adults, Boys and Adolescents.</p>
+                <div class="box-contenedor">School of Multimedia, Digital Art and Technology</div>
                 <a href="#" class="boton">See More</a>
             </div>
         </section>
@@ -110,23 +96,23 @@
                 <div class="cards">
                     <div class="card">
                         <img src="./img/clases.webp" alt="">
-                        <h4>Lorem ipsum dolor</h4>
-                        <p>Lorem ipsum dolor sit.</p>
+                        <h4>Media Design</h4>
+                        <p></p>
                     </div>
                     <div class="card">
                         <img src="./img/clases2.webp" alt="">
-                        <h4>Lorem ipsum dolor</h4>
-                        <p>Lorem ipsum dolor sit.</p>
+                        <h4>Digital Artistic Graphic Design</h4>
+                        <p></p>
                     </div>
                     <div class="card">
                         <img src="./img/profesores.webp" alt="">
-                        <h4>Lorem ipsum dolor</h4>
-                        <p>Lorem ipsum dolor sit.</p>
+                        <h4>Web Design and Programming</h4>
+                        <p></p>
                     </div>
                     <div class="card">
                         <img src="./img/alumnos2.jpeg" alt="">
-                        <h4>Lorem ipsum dolor</h4>
-                        <p>Lorem ipsum dolor sit.</p>
+                        <h4>Systems analyst</h4>
+                        <p></p>
                     </div>
                 </div>
             </div>
@@ -180,29 +166,28 @@
         <div class="container__footer">
             <div class="box__footer">
                 <h2>Social networks</h2>
-                <a href="https://web.facebook.com/untref/?locale=es_LA&_rdc=1&_rdr"><i class="fab fa-facebook-square"></i>Facebook</a>
+                <a href="https://web.facebook.com/untref/?locale=es_LA&_rdc=1&_rdr"><i class="fab fa-facebook-square"></i> Facebook</a>
                 <a href="https://twitter.com/i/flow/login?redirect_after_login=%2FUNTREF%3Fref_src%3Dtwsrc%255Egoogle%257Ctwcamp%255Eserp%257Ctwgr%255Eauthor"><i class="fab fa-twitter-square"></i> Twitter</a>
                 <a href="https://ar.linkedin.com/school/universidad-nacional-de-tres-de-febrero/"><i class="fab fa-linkedin"></i> Linkedin</a>
                 <a href="https://www.instagram.com/untref/?hl=es"><i class="fab fa-instagram-square"></i> Instagram</a>
             </div>
             <div class="box__footer">
                 <h2>Institute</h2>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d26272.289590234548!2d-58.58142322103056!3d-34.60324614490222!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb7c0fa8ea61b%3A0xc39ce2c5b55bb74!2sUniversidad%20Nacional%20de%20Tres%20de%20Febrero%20(UNTREF)%20-%20Rectorado!5e0!3m2!1ses!2sar!4v1689204430392!5m2!1ses!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe class="iframeA" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d26272.289590234548!2d-58.58142322103056!3d-34.60324614490222!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb7c0fa8ea61b%3A0xc39ce2c5b55bb74!2sUniversidad%20Nacional%20de%20Tres%20de%20Febrero%20(UNTREF)%20-%20Rectorado!5e0!3m2!1ses!2sar!4v1689204430392!5m2!1ses!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
             </div>
-            <div class="box__footer">
+            <div class="box__footer box_footer_contact">
                 <h2 class="contact-footer-h2">Contact</h2>
-                <ul>
-                    <i class="fa-solid fa-envelope"></i><li><a href="mailto:marianavelazquez_22@hotmail.com">E-mail</li></a>
-                    <i class="fa-solid fa-phone"></i><li><a href="tel://+543364645916">Phone</li></a>
-                    <i class="fa-brands fa-square-whatsapp"></i><li><a href="https://wa.me/543364645916/?text=tu%20texto%20personalizado"target="_blank">Whatsapp</li></a>
-                </ul>
+                <a href="mailto:marianavelazquez_22@hotmail.com"><i class="fa-solid fa-envelope"></i> E-mail</a> 
+                <a href="tel://+543364645916"><i class="fa-solid fa-phone"></i> Phone</a>
+                
+                <a href="https://wa.me/543364645916/?text=tu%20texto%20personalizado"target="_blank"><i class="fa-brands fa-square-whatsapp"></i> Whatsapp</a>
             </div>
         </div>
         
         <div class="box__copyright">
             <hr>
-            <p>Todos los derechos reservados © 2023 <b>Mariana Velázquez</b></p>
+            <p>Todos los derechos reservados © 2023 <br><b>Mariana Velázquez</b></p>
         </div>
     </footer>
 
